Make channel titles section dynamic to fix spacing issue, make ruler redraw on window resize

--- a/src/app/timeline/timeline.component.css
+++ b/src/app/timeline/timeline.component.css
@@ -54,7 +54,7 @@
 
 .channel-titles {
   padding-right: 0px;
-  width: 97px;
+  /*width: 97px;*/
 }
 
 .channel-title {
